base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: devops-app
spec:
  ingressClassName: nginx

  rules:
  - host: app.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
              
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3000
